--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,7 @@ anthropic==0.39.0
 
 # CrewAI
 crewai==0.86.0
-crewai-tools==0.14.0
+crewai-tools>=0.17.0
 
 # Task Queue
 celery==5.4.0
@@ -39,7 +39,6 @@ pytest==8.3.4
 pytest-asyncio==0.24.0
 pytest-cov==6.0.0
 pytest-mock==3.14.0
-httpx-test==0.1.0
 
 # Code quality
 black==24.10.0
