Fix #8: Remove sys.path.insert() and setup proper Python packaging
- Created pyproject.toml with all dependencies and proper package configuration
- Created setup.py for backwards compatibility
- Removed sys.path.insert() from 39 Python files across entire codebase
- Updated Dockerfile to use pip install -e . for proper package installation
- Set PYTHONPATH in Docker as backup measure
- All imports now use absolute package imports (from app.* from config.*)
- Tests pass with new packaging structure
- Application starts successfully

This fixes the broken import structure and makes the codebase portable.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,22 +7,28 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy package configuration first
+COPY pyproject.toml setup.py ./
 
 # Copy application code
-COPY . .
+COPY app ./app
+COPY config ./config
+COPY migrations ./migrations
+
+# Install package in editable mode with dependencies
+RUN pip install --no-cache-dir -e .
 
 # Create data directories
 RUN mkdir -p /app/data /app/data/chromadb
 
+# Set Python path (backup measure)
+ENV PYTHONPATH=/app
+
 # Expose port
 EXPOSE 8000
 
-# Run application
-CMD ["python", "app/main.py"]
+# Run application using installed module
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
