--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "python-multipart==0.0.19",
     "httpx==0.27.2",
     "websockets==14.1",
+    "aiofiles==24.1.0",
+    "greenlet==3.1.1",
 ]
 
 [project.optional-dependencies]
