--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
     "websockets==14.1",
     "aiofiles==24.1.0",
     "greenlet==3.1.1",
+    "tenacity==9.0.0",
+    "pybreaker==1.2.0",
 ]
 
 [project.optional-dependencies]
