--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,6 +37,10 @@ dependencies = [
     "greenlet==3.1.1",
     "tenacity==9.0.0",
     "pybreaker==1.2.0",
+    "authlib==1.3.2",
+    "python-jose[cryptography]==3.3.0",
+    "passlib[bcrypt]==1.7.4",
+    "cryptography==43.0.3",
 ]
 
 [project.optional-dependencies]
