--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "python-jose[cryptography]==3.3.0",
     "passlib[bcrypt]==1.7.4",
     "cryptography==43.0.3",
+    "slowapi==0.1.9",
 ]
 
 [project.optional-dependencies]
