--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,19 +17,19 @@ authors = [
 dependencies = [
     "fastapi==0.115.0",
     "uvicorn[standard]==0.32.0",
-    "pydantic==2.9.2",
-    "pydantic-settings==2.6.0",
+    "pydantic>=2.9.2",
+    "pydantic-settings>=2.6.0",
     "sqlalchemy==2.0.36",
     "alembic==1.13.3",
     "aiosqlite==0.20.0",
-    "chromadb==0.5.18",
-    "anthropic==0.39.0",
+    "chromadb>=0.5.18",
+    "anthropic>=0.39.0",
     "celery==5.4.0",
     "redis==5.2.0",
     "slack-sdk==3.33.4",
     "msgraph-sdk==1.12.0",
     "azure-identity==1.19.0",
-    "python-dotenv==1.0.1",
+    "python-dotenv>=1.0.1",
     "python-multipart==0.0.19",
     "httpx==0.27.2",
     "websockets==14.1",
@@ -42,6 +42,9 @@ dependencies = [
     "passlib[bcrypt]==1.7.4",
     "cryptography==43.0.3",
     "slowapi==0.1.9",
+    "langchain-anthropic>=0.1.23,<0.3.0",
+    "langchain-core>=0.2.26,<0.3.0",
+    "crewai>=0.86.0",
 ]
 
 [project.optional-dependencies]
