--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,8 +15,8 @@ authors = [
 ]
 
 dependencies = [
-    "fastapi==0.115.0",
-    "uvicorn[standard]==0.32.0",
+    "fastapi>=0.115.0,<0.116.0",
+    "uvicorn[standard]>=0.32.0",
     "pydantic>=2.9.2",
     "pydantic-settings>=2.6.0",
     "sqlalchemy==2.0.36",
@@ -35,7 +35,7 @@ dependencies = [
     "websockets==14.1",
     "aiofiles==24.1.0",
     "greenlet==3.1.1",
-    "tenacity==9.0.0",
+    "tenacity>=8.2.3,<9.0.0,!=8.4.0",
     "pybreaker==1.2.0",
     "authlib==1.3.2",
     "python-jose[cryptography]==3.3.0",
@@ -80,4 +80,3 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
-
