--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "passlib[bcrypt]==1.7.4",
     "cryptography==43.0.3",
     "slowapi==0.1.9",
+    "itsdangerous>=2.1.2",
     "langchain-anthropic>=0.1.23,<0.3.0",
     "langchain-core>=0.2.26,<0.3.0",
     "crewai>=0.86.0",
