--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "ag-grid-react": "^32.1.0",
     "antd": "^5.20.5",
     "aos": "^2.3.4",
