security: October 2025 security audit fixes
This commit addresses findings from the comprehensive security audit conducted on 2025-10-15.

## Summary of Fixes

**HIGH-001: Authentication Bypass in Debug Mode** - FIXED
- Changed auth logic to ALWAYS require authentication in production
- Production check now comes FIRST before debug bypass
- Prevents accidental bypass if ENV not properly set
- File: backend/app/dependencies/auth.py:36-57

**HIGH-002: Ephemeral Encryption Keys** - FIXED
- System now fails hard in production if ENCRYPTION_KEY not set
- Prevents data loss from ephemeral keys
- Added clear error message with key generation instructions
- File: backend/app/services/encryption_service.py:23-58

**HIGH-003: CORS Production Validation** - FIXED
- Added validation to reject localhost origins in production
- Prevents developer configs from leaking into production
- Warns about wildcard CORS usage
- File: backend/config/settings.py:64-86

**MEDIUM-002: Session Secret Fallback** - FIXED
- Removed hardcoded dev session secret
- Now generates random secret per session in development
- File: backend/app/main.py:249-265

**MEDIUM-005: Docker Compose Encryption Key** - FIXED
- docker-compose.yml now requires ENCRYPTION_KEY env var
- Container won't start without it
- File: docker-compose.yml:35-36

## Additional Changes

- Updated backend/.env.example with security settings documentation
- Added comprehensive security report: docs/security/2025-10-security-report.md
- Updated LESSONS_LEARNED.md with October 2025 security audit findings

## Security Metrics

- CRITICAL: 0 (down from 1 in previous audit)
- HIGH: 3 → 0 (all fixed)
- MEDIUM: 5 → 3 (2 fixed)
- LOW: 4 (tracked, not blocking)

## Compliance Status

11/12 compliance items now passing ✅

## Testing

- All fixes prevent configuration errors in production
- Development mode remains functional with generated secrets
- No breaking changes to existing functionality

## Documentation

See full security report at: d

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,3 +42,17 @@ DEFAULT_MAX_TOKENS=4096
 # Logging
 LOG_LEVEL=INFO
 LOG_FORMAT=json
+
+# Security Settings (REQUIRED for production)
+# Encryption key for API keys at rest (REQUIRED for persistent storage)
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+ENCRYPTION_KEY=your-fernet-key-here
+
+# JWT Secret for session encryption (REQUIRED in production)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=your-jwt-secret-key-here
+
+# Google OAuth (optional, for authentication)
+GOOGLE_CLIENT_ID=your-client-id
+GOOGLE_CLIENT_SECRET=your-client-secret
+ALLOWED_EMAIL=your-email@example.com
