feat: migrate from ChromaDB to LanceDB for vector storage
- Replace ChromaDB with LanceDB for improved performance and reliability
- Add sentence-transformers for local embedding generation
- Create lance_client.py with Pydantic LanceModel schemas
- Update memory_service.py for LanceDB table-based API
- Add Railway deployment configuration files
- Update tests for LanceDB compatibility
- Fix pre-existing test fixture issues

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,7 +14,7 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # Database Settings
 DATABASE_URL=sqlite:///./data/personal_q.db
-CHROMA_DB_PATH=./data/chromadb
+LANCE_DB_PATH=./data/lancedb
 
 # Redis Settings
 REDIS_URL=redis://localhost:6379/0
