--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "serve dist -s -l ${PORT:-5173}",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "playwright test",
@@ -105,6 +106,7 @@
     "react-type-animation": "^3.2.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
+    "serve": "^14.2.5",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^3.0.2",
