--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -5,3 +5,5 @@ dockerfilePath = "Dockerfile"
 [deploy]
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+# Use Dockerfile ENTRYPOINT - override any dashboard startCommand
+startCommand = "/app/entrypoint.sh"
