fix: run celery worker directly via CMD, not entrypoint
Railway's startCommand was overriding the Docker ENTRYPOINT.
Using CMD instead allows the celery command to run directly,
and the worker_init signal in celery_app.py will initialize
the database when the worker starts.

--- a/Dockerfile.celery-worker
+++ b/Dockerfile.celery-worker
@@ -51,8 +51,6 @@ USER appuser
 # Set Python path
 ENV PYTHONPATH=/app
 
-# Default to worker service type
-ENV SERVICE_TYPE=worker
-
-# Use entrypoint script
-ENTRYPOINT ["/app/entrypoint.sh"]
+# Run celery worker directly (bypasses entrypoint.sh)
+# The worker_init signal in celery_app.py will initialize the database
+CMD ["celery", "-A", "app.workers.celery_app", "worker", "--loglevel=info", "--pool=solo"]
