--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "langchain-anthropic>=0.1.23,<0.3.0",
     "langchain-core>=0.2.26,<0.3.0",
     "crewai>=0.86.0",
+    "litellm>=1.50.0",
 ]
 
 [project.optional-dependencies]
